<resources>
    <string name="app_name">StoryApp</string>
    <string name="message_text">Masuk dulu yuk</string>
    <string name="title_text">Ini Kisahku Mana Kisahmu?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="banner_image">Banner Image</string>
    <string name="masuk">Masuk</string>
    <string name="daftar_yuk"><u>Daftar Yuk!</u></string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="kenalan_dulu_yuk">Kenalan dulu yuk</string>
    <string name="name">Name</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="masuk_yuk"><u>Masuk Yuk!</u></string>
    <string name="siap_sharing_ceritamu">Siap Sharing Ceritamu?</string>
    <string name="daftar">Daftar</string>
    <string name="description_detailValue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non augue rutrum, finibus sem accumsan, sagittis justo. Mauris et velit rutrum, eleifend sem eu, ornare velit. Nulla nec nulla vel erat lobortis accumsan ut sit amet justo. Duis finibus diam vitae urna condimentum ullamcorper.</string>
    <string name="sender_name">Nama Pengirim</string>
    <string name="sender_date">Tanggal Pengiriman</string>
    <string name="story_picture">Story Picture</string>
    <string name="data_detail">Data Detail</string>
    <string name="id">ID</string>
    <string name="id_detailValue">99</string>
    <string name="date">Date</string>
    <string name="description_title">Description</string>
    <string name="date_detailValue">1 Januari 2022</string>
    <string name="name_detailValue">Author - Guest</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="upload">Upload</string>
    <string name="name_title">Name</string>
    <string name="addStory">Add Story</string>
    <string name="detailStory">Detail Story</string>
    <string name="logout">Logout</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="story_title">Story</string>
    <string name="retry">Retry</string>
    <string name="add_story_button">Add Story Button</string>
    <string name="error_msg">Oops.. Something Went Wrong :(</string>
    <string name="google_maps_button">Google Maps Button</string>
</resources>